<resources>
    <string name="app_name">HandyCart</string>
    <string name="facebook_app_id">529093347957821</string>
    <string name="fb_login_protocol_scheme">fb529093347957821</string>
    <string name="language" translatable="false">vi</string>
    <string name="handle_error" translatable="false">Có lỗi xảy ra. Vui lòng thử lại.</string>
    <string name="default_notification_channel_id" translatable="false">channel_id</string>


    <!--    Master-->
    <string name="master_home_title">Trang chủ</string>
    <string name="master_favorite_title">Yêu thích</string>
    <string name="master_search_title">Tìm kiếm</string>
    <string name="master_notification_title">Thông báo</string>
    <string name="master_profile_title">Cá nhân</string>

    <!--    Login-->
    <string name="login_title">Đăng nhập</string>
    <string name="login_username">Email/Số điện thoại</string>
    <string name="login_password">Mật khẩu</string>
    <string name="login_button">Đăng nhập</string>
    <string name="login_forgot_password">Quên mật khẩu</string>
    <string name="login_user_already">Đă là thành viên</string>
    <string name="login_social_fb">Đăng nhập Facebook</string>
    <string name="login_social_kakao">Đăng nhập Kakaotalk</string>
    <string name="login_social_google">Đăng nhập Google</string>
    <string name="login_register">Không phải thành viên? <font color="#1976D2"><b>Đăng ký</b></font></string>
    <string name="login_validate_email_empty">Vui lòng nhập Email hoặc số điện thoại</string>
    <string name="login_validate_email_error">Vui lòng nhập Email hoặc số điện thoại đúng định dạng</string>
    <string name="login_validate_password_empty">Vui lòng nhập mật khẩu</string>
    <string name="login_validate_password_error">Mật khẩu phải lớn hơn 6 kí tự bao gồm chữ cái và số</string>
    <string name="login_success_request">Đăng nhập thành công</string>

    <!--    Search-->
    <string name="search_hint">Nhập từ khóa</string>

    <!--    Favorite Fragment-->
    <string name="favorite_product_title">Sản phẩm yêu thích</string>
    <string name="favorite_supplier_title">Nhà hàng yêu thích</string>

    <!--    Global-->
    <string name="need_login">Tính năng yêu cầu đăng nhập</string>

    <!--    Profile-->
    <string name="profile_person_title">Thông tin cá nhân</string>
    <string name="profile_faq_title">FAQ</string>
    <string name="profile_notification_title">Cài đặt thông báo</string>
    <string name="profile_language_title">Cài đặt ngôn ngữ</string>
    <string name="profile_link_title">Liên kết tài khoản</string>
    <string name="profile_contact_title">Liên hệ</string>
    <string name="profile_changepassword_title">Đổi mật khẩu</string>
    <string name="profile_login_title">Đăng nhập</string>
    <string name="profile_logout_title">Đăng xuất</string>

    //Favorite
    <string name="favorite_need_login">Đăng nhập</string>
    <string name="favorite_cancel">Hủy </string>
    <string name="favorite_title">Thông báo</string>
    <string name="favorite_message">Tính năng yêu cầu đăng nhập</string>

    <!--    Guide-->
    <string name="guide_toolbar_title">Hướng dẫn</string>

    <!--    Detail product-->
    <string name="detail_product_button_title">Mua hàng</string>
    <string name="detail_product_out_of_stock">Hết hàng</string>
    <string name="detail_product_title">Chi tiết sản phẩm</string>
    <string name="detail_product_description_title">Mô tả</string>
    <string name="detail_product_guide_title">Hướng dẫn</string>

    <!--    Cart-->
    <string name="cart_toolbar_title">Giỏ hàng</string>
    <string name="cart_sum_money">Tổng tiền</string>
    <string name="cart_buy_more">Mua thêm</string>
    <string name="cart_buy_condition">Đơn của bạn phải trên 150,000 VND</string>
    <string name="cart_market">Market</string>
    <string name="cart_delete">Xóa</string>

    <!--    Detail supplier-->
    <string name="detail_supplier_menu_title">Menu</string>
    <string name="detail_supplier_like_title">Thích</string>
    <string name="detail_supplier_share_title">Chia sẻ</string>
    <string name="detail_supplier_service_title">Dịch vụ</string>
    <string name="detail_supplier_like_quantity_title">Lượt yêu thích:</string>
    <string name="detail_supplier_des_one">Thưởng thức món ăn Hàn Quốc với giá cả hợp lý *Thời gian nấu dự kiến: 20-30 phút *Thời gian đặt hàng: 10:00-19:00 *Thời gian giao hàng: 10:00-21:00</string>
    <string name="detail_supplier_des_two">*Thời gian nấu dự kiến: 20-30 phút</string>
    <string name="detail_supplier_des_three">*Thời gian đặt hàng: 10:00-19:00</string>
    <string name="detail_supplier_des_four" translatable="false">*Thời gian giao hàng: 10:00-21:00</string>

    <!--    List product-->
    <string name="list_product_toolbar_title">Danh sách sản phẩm</string>

    <!--    MultiFragment-->
    <string name="multi_language_change_title">Đang thiết lập ngôn ngữ</string>
</resources>
