<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginViewModel"
            type="com.soict.hoangviet.handycart.ui.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_white"
        android:orientation="vertical">

        <com.soict.hoangviet.handycart.custom.BaseToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:icon_left="back"
            app:icon_right="none"
            app:title="@string/login_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:orientation="vertical"
            android:padding="@dimen/content_padding_8_dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_username"
                    android:inputType="text"
                    android:lines="1"
                    android:minLines="1"
                    android:text="@={loginViewModel.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4_dp">

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:minLines="1"
                    android:text="@={loginViewModel.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_32_dp"
                android:background="@drawable/bg_primary_4_dp"
                android:clickable="true"
                android:gravity="center"
                android:onClick="@{loginViewModel::onLoginClick}"
                android:padding="@dimen/content_padding_10_dp"
                android:text="@string/login_button"
                android:textAllCaps="true"
                android:textColor="@color/md_white_1000"
                android:textSize="@dimen/textsize_16_sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10_dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_forgot_password"
                    android:textColor="@color/md_blue_700" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/login_user_already"
                    android:textColor="@color/md_blue_700" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_register"
            android:orientation="vertical"
            android:padding="@dimen/content_padding_8_dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8_dp"
                android:background="@drawable/bg_button_facebook"
                android:drawableStart="@drawable/ic_relate_facebook"
                android:gravity="center"
                android:padding="@dimen/content_padding_4_dp"
                android:text="@string/login_social_fb"
                android:textColor="@color/md_white_1000"
                android:textSize="@dimen/textsize_16_sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8_dp"
                android:background="@drawable/bg_button_kakao"
                android:drawableStart="@drawable/ic_kakaotalk"
                android:gravity="center"
                android:padding="@dimen/content_padding_4_dp"
                android:text="@string/login_social_kakao"
                android:textColor="@color/md_black_1000"
                android:textSize="@dimen/textsize_16_sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_google"
                android:drawableStart="@drawable/ic_relate_google"
                android:gravity="center"
                android:padding="@dimen/content_padding_4_dp"
                android:text="@string/login_social_google"
                android:textColor="@color/md_white_1000"
                android:textSize="@dimen/textsize_16_sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/content_padding_10_dp"
            android:text="@string/login_register" />
    </RelativeLayout>
</layout>
