<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/content_padding_8_dp"
    android:paddingBottom="@dimen/content_padding_8_dp">

    <TextView
        android:id="@+id/home_tab"
        style="@style/BottomBarStyle"
        android:drawableTop="@drawable/ic_tab_home_select"
        android:text="@string/master_home_title"
        app:layout_constraintEnd_toStartOf="@id/favorite_tab"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/favorite_tab"
        style="@style/BottomBarStyle"
        android:drawableTop="@drawable/ic_tab_favourite_select"
        android:drawablePadding="2dp"
        android:text="@string/master_favorite_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_tab"
        app:layout_constraintStart_toEndOf="@id/home_tab"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search_tab"
        style="@style/BottomBarStyle"
        android:drawableTop="@drawable/ic_tab_search_select"
        android:text="@string/master_search_title"
        app:layout_constraintEnd_toStartOf="@id/notification_tab"
        app:layout_constraintStart_toEndOf="@id/favorite_tab"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/notification_tab"
        style="@style/BottomBarStyle"
        android:drawableTop="@drawable/ic_tab_notification_select"
        android:text="@string/master_notification_title"
        app:layout_constraintEnd_toStartOf="@id/profile_tab"
        app:layout_constraintStart_toEndOf="@id/search_tab"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imv_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_notice_notification"
        app:layout_constraintStart_toEndOf="@id/guide_line"
        app:layout_constraintTop_toTopOf="@id/notification_tab" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <TextView
        android:id="@+id/profile_tab"
        style="@style/BottomBarStyle"
        android:drawableTop="@drawable/ic_tab_profile_select"
        android:text="@string/master_profile_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/notification_tab"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>