<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.soict.hoangviet.handycart.utils.NumberUtil" />

        <variable
            name="detailProductResponse"
            type="com.soict.hoangviet.handycart.entity.response.DetailProductResponse" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/btn_buy_product">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/md_white_1000">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_collapseMode="parallax">

                        <ImageView
                            android:id="@+id/imv_product"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:scaleType="centerCrop"
                            app:default="@{@drawable/img_image_default}"
                            app:imageDetailProductUrl="@{detailProductResponse.thumbnail}"
                            app:layout_constraintDimensionRatio="16:9"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:src="@drawable/img_image_default" />

                        <TextView
                            android:id="@+id/tv_product_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_10_dp"
                            android:fontFamily="@font/lato_bold"
                            android:text="@{detailProductResponse.name}"
                            android:textColor="@color/color_brown"
                            android:textSize="@dimen/textsize_16_sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/imv_product"
                            tools:text="BIBIGO Bánh xếp mỏng 1.05kg" />

                        <TextView
                            android:id="@+id/tv_regular_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_10_dp"
                            android:fontFamily="@font/lato_regular"
                            android:textColor="@color/color_brown"
                            android:textSize="@dimen/textsize_18_sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_product_name"
                            app:sellerPrice="@{detailProductResponse.regularPrice}"
                            tools:text="183.000 VND" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_regular_price">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/lato_bold"
                                android:text="@{NumberUtil.handlePercentage(detailProductResponse.sale)}"
                                android:textColor="@color/discount_color"
                                android:textSize="@dimen/textsize_18_sp"
                                tools:text="10%" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin_10_dp"
                                android:fontFamily="@font/lato_bold"
                                android:text="@{NumberUtil.handlePrice(detailProductResponse.sellerPrice)}"
                                android:textColor="@color/md_black_1000"
                                android:textSize="@dimen/textsize_20_sp"
                                tools:text="164.700 VND" />

                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <com.soict.hoangviet.handycart.custom.BaseToolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/md_white_1000"
                        app:icon_left="back"
                        app:icon_right="share"
                        app:layout_collapseMode="pin"
                        app:layout_constraintTop_toTopOf="parent"
                        app:title="@string/detail_product_title" />

                </com.google.android.material.appbar.CollapsingToolbarLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10_dp"
                    android:paddingStart="@dimen/content_padding_10_dp"
                    android:paddingEnd="@dimen/content_padding_10_dp">

                    <TextView
                        android:id="@+id/btn_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/content_padding_10_dp"
                        android:text="@string/detail_product_description_title"
                        app:layout_constraintEnd_toStartOf="@id/btn_guide"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:background="@drawable/bg_tab_selected_detail_product" />

                    <TextView
                        android:id="@+id/btn_guide"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/content_padding_10_dp"
                        android:text="@string/guide_toolbar_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/btn_description"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:background="@drawable/bg_tab_unselected_detail_product" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.viewpager.widget.ViewPager
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                android:id="@+id/detail_view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingStart="@dimen/content_padding_10_dp"
                android:paddingEnd="@dimen/content_padding_10_dp" />

            <include
                android:id="@+id/sheets"
                layout="@layout/layout_bottom_sheet" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <TextView
            android:id="@+id/btn_buy_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:paddingTop="@dimen/content_padding_10_dp"
            android:paddingBottom="@dimen/content_padding_10_dp"
            android:text="@string/detail_product_button_title"
            android:textAllCaps="true"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/textsize_18_sp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>